feat: Add and implement routes to set power rating and notes for exeercise log
