# backend/pkg/workouts/workouts.swagger.json
@@ -1153,6 +1153,98 @@
         ]
       }
     },
+    "/v1/workouts/{workoutId}/log/exercise/{exerciseLogId}/notes": {
+      "post": {
+        "summary": "Добавление заметки к выполнению упражнения",
+        "operationId": "WorkoutService_AddNotesToExerciseLog",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "type": "object",
+              "properties": {}
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "workoutId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "exerciseLogId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/WorkoutServiceAddNotesToExerciseLogBody"
+            }
+          }
+        ],
+        "tags": [
+          "WorkoutService"
+        ]
+      }
+    },
+    "/v1/workouts/{workoutId}/log/exercise/{exerciseLogId}/power_rating": {
+      "post": {
+        "summary": "Добавить оценку усилий при выполнении упражнения",
+        "operationId": "WorkoutService_AddPowerRatingToExerciseLog",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "type": "object",
+              "properties": {}
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "workoutId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "exerciseLogId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/WorkoutServiceAddPowerRatingToExerciseLogBody"
+            }
+          }
+        ],
+        "tags": [
+          "WorkoutService"
+        ]
+      }
+    },
     "/v1/workouts/{workoutId}/log/exercise/{exerciseLogId}/set": {
       "post": {
         "summary": "Метод для создания записи о выполнении подхода",
@@ -1469,6 +1561,23 @@
       "properties": {
         "comment": {
           "type": "string"
+        }
+      }
+    },
+    "WorkoutServiceAddNotesToExerciseLogBody": {
+      "type": "object",
+      "properties": {
+        "notes": {
+          "type": "string"
+        }
+      }
+    },
+    "WorkoutServiceAddPowerRatingToExerciseLogBody": {
+      "type": "object",
+      "properties": {
+        "powerRating": {
+          "type": "integer",
+          "format": "int32"
         }
       }
     },
